--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
   background-color: #000;
   color: #000;
   font-family: 'Source Sans Pro', sans-serif;
-  margin: 0 14px 0 14px;
+  margin: 0 14px;
 }
 
 div.overflow_wrapper {
@@ -60,7 +60,6 @@ img {
   padding-top: 28vh;
 }
 
-
 #how_can_we_help h2 {
   color: #0b232d;
   padding-top: 13vh;
@@ -70,11 +69,8 @@ img {
   padding-top: 6vh;
   width: 85vw;
   margin: auto;
-  align-items: center;
-  text-align: center;
   display: flex;
 }
-
 
 #how_can_we_help .helpful_item {
   background-color: #0b232d;
