--- a/css/992.css
+++ b/css/992.css
@@ -3,13 +3,13 @@
     font-size: 8px;
   }
 
+  h1 {
+	  padding-top: 20vh;
+	}
+
   .general_text {
     line-height: 34px;
   }
-
-  #what_we_do h1 {
-	  padding-top: 22vh;
-	}
 
 	.helpful_content p {
 	  font-size: 2.70rem;
