--- a/css/576.css
+++ b/css/576.css
@@ -3,19 +3,23 @@
     font-size: 6px;
   }
 
+  h1 {
+	  padding-top: 10vh;
+	}
+
   h2 {
   	width: 75vw;
   	margin: auto;
   	padding-top: 13vh;
   }
 
+  section {
+  	padding-bottom: 8vh;
+  }
+
   .general_text {
     line-height: 26px;
   }
-
-  #what_we_do h1 {
-	  padding-top: 16vh;
-	}
 
 	.helpful_content p {
 	  font-size: 3.14rem;
