more mobile layout tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,6 @@ body {
   margin: 0 14px;
 }
 
-div.overflow_wrapper {
-  overflow-x: hidden;
-}
-
 section {
   padding-bottom: 2rem;
   width: 100%;
@@ -34,6 +30,10 @@ img {
   max-width: 100%;
 }
 
+div.overflow_wrapper {
+  overflow-x: hidden;
+}
+
 .general_text {
   width: 812px;
   margin: auto;
@@ -47,7 +47,7 @@ img {
   min-height: 100vh;
 }
 
-.partialscreen_section{
+.partialscreen_section {
   min-height: 95vh;
 }
 
@@ -102,12 +102,6 @@ img {
   padding-top: 4%;
 }
 
-@media (max-width: 1320px) {
-  .helpful_content p {
-    line-height: 25px;
-  }
-}
-
 #what_do_our_clients_say {
   background-color: #0b232d;
   color: #fff;
@@ -119,7 +113,7 @@ img {
 
 #what_do_our_clients_say .client_container {
   width: 40vw;
-  height: 26vw;
+  height: 50vh;
   background-color: #3b525c;
   margin: auto;
   margin-top: 10vh;
@@ -159,16 +153,6 @@ img {
   padding-top: 1vh;
 }
 
-@media (max-width: 1320px) {
-  .client_content img {
-    padding-top: 3vh;
-  }
-
-  .client_content p {
-    width: 80%;
-  }
-}
-
 #our_story, #meet_the_team {
   color: #0b232d;
 }
@@ -185,14 +169,12 @@ img {
   box-sizing: border-box;
 }
 
-
 #meet_the_team ul {
   margin-top: 13vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   height: 135vh;
 }
-
 
 #meet_the_team img {
   display: block;
