--- a/css/1200.css
+++ b/css/1200.css
@@ -11,7 +11,6 @@
     line-height: 38px;
     width: 55vw;
     text-align: justify;
-    text-justify: inter-character;
   }
 
 	#how_can_we_help h2 {
@@ -31,6 +30,7 @@
 	  background-color: #0b232d;
 	  position: relative;
 	  width: 305px;
+	  max-width: 85vw;
 	  padding-bottom: 305px; 
 	  margin: 15px auto;
 	  overflow: hidden;
