--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 0;
     background-color: #f0f0f0;
 }
@@ -44,4 +43,12 @@ button {
 }
 button:hover {
     background-color: #0056b3;
+}
+.skipBtnContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    width: 100%;
+    gap: 20px;
 }
