--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,19 @@ button:hover {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    margin-bottom: 40px;
     width: 100%;
     gap: 20px;
+
+}
+
+#updateMsg {
+    background-color: #007bff;
+    color: white;
+    padding: 5px;
+    display: none;
+}
+
+#instructions {
+    font-style: italic;
 }
